--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@
     box-sizing: border-box;
     font-family: 'Poppins' sans-serif;
 }
+
+.header{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(5,0,136,0.5), rgba(5,0,136,0.5)), url(images/back.png);
+    background-position: center;
+    background-size: cover;
+}
