--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 18px 8%;
+    transition: background 1s;
 }
 
 nav .logo{
@@ -38,4 +39,22 @@ nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+}
+
+nav:hover{
+    background: #fff;
+}
+
+nav:hover .logo{
+    color: #333;
+}
+
+nav:hover ul li a{
+    color: #333;
 }
