--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins';
 }
 
 .header{
@@ -58,3 +58,16 @@ nav:hover .logo{
 nav:hover ul li a{
     color: #333;
 }
+
+.content{
+    margin-top: 9%;
+    margin-left: 9%;
+    color: #fff;
+}
+
+.content h1{
+    font-size: 120px;
+    line-height: 140px;
+    font-weight: 600;
+}
+
