--- a/style.css
+++ b/style.css
@@ -71,3 +71,17 @@ nav:hover ul li a{
     font-weight: 600;
 }
 
+.content p{
+    max-width: 500px;
+    line-height: 28px;
+}
+
+.links{
+    margin-top: 30px;
+}
+
+.links a{
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+}
