--- a/style.css
+++ b/style.css
@@ -85,3 +85,10 @@ nav:hover ul li a{
     text-decoration: none;
     display: inline-block;
 }
+
+.btn{
+    border: 2px solid #fff;
+    padding: 10px 35px;
+    border-radius: 30px;
+    margin-right: 15px;
+}
