--- a/style.css
+++ b/style.css
@@ -92,3 +92,18 @@ nav:hover ul li a{
     border-radius: 30px;
     margin-right: 15px;
 }
+
+.slide-left{
+    animation: slideleft 1s linear forwards;
+}
+
+@keyframes slideleft {
+    0%{
+        transform: translate(100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(0px);
+        opacity: 1;
+    }
+}
