--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     background-image: linear-gradient(rgba(5,0,136,0.5), rgba(5,0,136,0.5)), url(images/back.png);
     background-position: center;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 nav{
@@ -60,8 +61,8 @@ nav:hover ul li a{
 }
 
 .content{
-    margin-top: 9%;
-    margin-left: 9%;
+    margin-top: 6%;
+    margin-left: 6%;
     color: #fff;
 }
 
@@ -74,10 +75,12 @@ nav:hover ul li a{
 .content p{
     max-width: 500px;
     line-height: 28px;
+    opacity: 0;
 }
 
 .links{
     margin-top: 30px;
+    opacity: 0;
 }
 
 .links a{
@@ -106,4 +109,12 @@ nav:hover ul li a{
         transform: translate(0px);
         opacity: 1;
     }
+}
+
+p.slide-left{
+    animation-delay: 1s;
+}
+
+.links.slide-left{
+    animation-delay: 2s;
 }
